// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component renders correctly for company admin 1`] = `
<div>
  <nav
    class="sidebarNavigation"
  >
    <a
      class="sidebarLink"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
      Home
    </a>
    <a
      class="sidebarLink"
      href="/projects"
    >
      <svg
        color="primary"
        height="24"
        style="font-size: 24px;"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <style>
            .Design_svg__b{fill:#007bbd}
          </style>
        </defs>
        <path
          d="M0 0h24v24H0z"
          style="fill: none;"
        />
        <path
          class="Design_svg__b"
          d="m16.353 11.51 1.57-1.57-3.75-3.75-1.57 1.57-4.14-4.13a2 2 0 0 0-2.83 0l-1.9 1.9a2 2 0 0 0 0 2.83l4.13 4.13-4.75 4.76V21h3.75l4.76-4.76 4.13 4.13a2 2 0 0 0 2.83 0l1.9-1.9a2 2 0 0 0 0-2.83Zm-7.06-.44-4.14-4.13 1.89-1.9 1.27 1.27-1.18 1.19 1.41 1.41 1.19-1.19 1.45 1.45Zm7.88 7.89-4.13-4.13 1.9-1.9 1.45 1.45-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27ZM20.823 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1.009 1.009 0 0 0-1.41 0l-1.83 1.83 3.75 3.75Z"
        />
      </svg>
      Projects
    </a>
    <a
      class="sidebarLink"
      href="/training"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
        />
      </svg>
      Training
    </a>
    <a
      class="sidebarLink"
      href="/team"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
        />
      </svg>
      Team
    </a>
    <a
      class="sidebarLink"
      href="/companies/1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
        />
      </svg>
      Company
    </a>
    <a
      class="sidebarLink"
      href="/toolkit"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
        />
      </svg>
      Tools
    </a>
  </nav>
</div>
`;

exports[`Sidebar component renders correctly for installer 1`] = `
<div>
  <nav
    class="sidebarNavigation"
  >
    <a
      class="sidebarLink"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
      Home
    </a>
    <a
      class="sidebarLink"
      href="/training"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
        />
      </svg>
      Training
    </a>
  </nav>
</div>
`;

exports[`Sidebar component renders correctly for installer in a T2 company 1`] = `
<div>
  <nav
    class="sidebarNavigation"
  >
    <a
      class="sidebarLink"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
      Home
    </a>
    <a
      class="sidebarLink"
      href="/projects"
    >
      <svg
        color="primary"
        height="24"
        style="font-size: 24px;"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <style>
            .Design_svg__b{fill:#007bbd}
          </style>
        </defs>
        <path
          d="M0 0h24v24H0z"
          style="fill: none;"
        />
        <path
          class="Design_svg__b"
          d="m16.353 11.51 1.57-1.57-3.75-3.75-1.57 1.57-4.14-4.13a2 2 0 0 0-2.83 0l-1.9 1.9a2 2 0 0 0 0 2.83l4.13 4.13-4.75 4.76V21h3.75l4.76-4.76 4.13 4.13a2 2 0 0 0 2.83 0l1.9-1.9a2 2 0 0 0 0-2.83Zm-7.06-.44-4.14-4.13 1.89-1.9 1.27 1.27-1.18 1.19 1.41 1.41 1.19-1.19 1.45 1.45Zm7.88 7.89-4.13-4.13 1.9-1.9 1.45 1.45-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27ZM20.823 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1.009 1.009 0 0 0-1.41 0l-1.83 1.83 3.75 3.75Z"
        />
      </svg>
      Projects
    </a>
    <a
      class="sidebarLink"
      href="/training"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
        />
      </svg>
      Training
    </a>
    <a
      class="sidebarLink"
      href="/companies/1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
        />
      </svg>
      Company
    </a>
    <a
      class="sidebarLink"
      href="/toolkit"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
        />
      </svg>
      Tools
    </a>
  </nav>
</div>
`;

exports[`Sidebar component renders correctly for installer in a company 1`] = `
<div>
  <nav
    class="sidebarNavigation"
  >
    <a
      class="sidebarLink"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
      Home
    </a>
    <a
      class="sidebarLink"
      href="/training"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
        />
      </svg>
      Training
    </a>
    <a
      class="sidebarLink"
      href="/companies/1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
        />
      </svg>
      Company
    </a>
    <a
      class="sidebarLink"
      href="/toolkit"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
        />
      </svg>
      Tools
    </a>
  </nav>
</div>
`;

exports[`Sidebar component renders correctly for installer with projects 1`] = `
<div>
  <nav
    class="sidebarNavigation"
  >
    <a
      class="sidebarLink"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
      Home
    </a>
    <a
      class="sidebarLink"
      href="/projects"
    >
      <svg
        color="primary"
        height="24"
        style="font-size: 24px;"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <style>
            .Design_svg__b{fill:#007bbd}
          </style>
        </defs>
        <path
          d="M0 0h24v24H0z"
          style="fill: none;"
        />
        <path
          class="Design_svg__b"
          d="m16.353 11.51 1.57-1.57-3.75-3.75-1.57 1.57-4.14-4.13a2 2 0 0 0-2.83 0l-1.9 1.9a2 2 0 0 0 0 2.83l4.13 4.13-4.75 4.76V21h3.75l4.76-4.76 4.13 4.13a2 2 0 0 0 2.83 0l1.9-1.9a2 2 0 0 0 0-2.83Zm-7.06-.44-4.14-4.13 1.89-1.9 1.27 1.27-1.18 1.19 1.41 1.41 1.19-1.19 1.45 1.45Zm7.88 7.89-4.13-4.13 1.9-1.9 1.45 1.45-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27ZM20.823 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1.009 1.009 0 0 0-1.41 0l-1.83 1.83 3.75 3.75Z"
        />
      </svg>
      Projects
    </a>
    <a
      class="sidebarLink"
      href="/training"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
        />
      </svg>
      Training
    </a>
    <a
      class="sidebarLink"
      href="/companies/1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
        />
      </svg>
      Company
    </a>
    <a
      class="sidebarLink"
      href="/toolkit"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
        />
      </svg>
      Tools
    </a>
  </nav>
</div>
`;

exports[`Sidebar component renders correctly for market admin 1`] = `
<div>
  <nav
    class="sidebarNavigation"
  >
    <a
      class="sidebarLink"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
      Home
    </a>
    <a
      class="sidebarLink"
      href="/projects"
    >
      <svg
        color="primary"
        height="24"
        style="font-size: 24px;"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <style>
            .Design_svg__b{fill:#007bbd}
          </style>
        </defs>
        <path
          d="M0 0h24v24H0z"
          style="fill: none;"
        />
        <path
          class="Design_svg__b"
          d="m16.353 11.51 1.57-1.57-3.75-3.75-1.57 1.57-4.14-4.13a2 2 0 0 0-2.83 0l-1.9 1.9a2 2 0 0 0 0 2.83l4.13 4.13-4.75 4.76V21h3.75l4.76-4.76 4.13 4.13a2 2 0 0 0 2.83 0l1.9-1.9a2 2 0 0 0 0-2.83Zm-7.06-.44-4.14-4.13 1.89-1.9 1.27 1.27-1.18 1.19 1.41 1.41 1.19-1.19 1.45 1.45Zm7.88 7.89-4.13-4.13 1.9-1.9 1.45 1.45-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27ZM20.823 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1.009 1.009 0 0 0-1.41 0l-1.83 1.83 3.75 3.75Z"
        />
      </svg>
      Projects
    </a>
    <a
      class="sidebarLink"
      href="/training"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
        />
      </svg>
      Training
    </a>
    <a
      class="sidebarLink"
      href="/team"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
        />
      </svg>
      Team
    </a>
    <a
      class="sidebarLink"
      href="/companies"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
        />
      </svg>
      Companies
    </a>
    <a
      class="sidebarLink"
      href="/toolkit"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
        />
      </svg>
      Tools
    </a>
    <a
      class="sidebarLink"
      href="/admin/products"
    >
      <svg
        color="primary"
        height="24"
        style="font-size: 24px;"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <style>
            .Box_svg__b{fill:#007bbd}
          </style>
        </defs>
        <path
          class="Box_svg__b"
          d="M21.385 7.027a.489.489 0 0 0-.055-.153.5.5 0 0 0-.12-.138 2.5 2.5 0 0 0-.8-.736l-7-4a2.507 2.507 0 0 0-2.5 0l-7 4a2.486 2.486 0 0 0-.787.739.473.473 0 0 0-.174.29 2.49 2.49 0 0 0-.282 1.136v8a2.508 2.508 0 0 0 1.252 2.164l7 4a2.507 2.507 0 0 0 2.5 0l7-4a2.507 2.507 0 0 0 1.25-2.163v-8a2.487 2.487 0 0 0-.282-1.139Zm-9.968-4.16a1.508 1.508 0 0 1 1.5 0l7 4a1.51 1.51 0 0 1 .193.135l-3.438 1.989-7.949-4.585Zm-3.7 2.114 7.956 4.588-3.506 2.028-7.943-4.6a1.48 1.48 0 0 1 .191-.133Zm-3.3 12.481a1.5 1.5 0 0 1-.75-1.3v-8a1.471 1.471 0 0 1 .033-.306l7.964 4.608v9.109a1.478 1.478 0 0 1-.252-.113Zm16.25-1.3a1.5 1.5 0 0 1-.748 1.3l-7 4a1.505 1.505 0 0 1-.25.111v-9.11l7.964-4.607a1.485 1.485 0 0 1 .036.308Z"
        />
        <path
          class="Box_svg__b"
          d="M15.214 13.916a.167.167 0 0 0 .084-.023l2.239-1.3a.167.167 0 1 0-.167-.288l-2.239 1.3a.167.167 0 0 0 .084.311ZM15.214 15.249a.167.167 0 0 0 .084-.023l2.239-1.3a.167.167 0 1 0-.167-.288l-2.24 1.301a.167.167 0 0 0 .084.311Z"
        />
        <path
          class="Box_svg__b"
          d="M19 9.696a.333.333 0 0 0-.333 0l-5 2.9a.333.333 0 0 0-.167.288v5a.333.333 0 0 0 .5.288l5-2.892a.333.333 0 0 0 .167-.288v-5A.333.333 0 0 0 19 9.696Zm-.5 5.1-4.333 2.507v-4.228l4.333-2.512Z"
        />
      </svg>
      Inventory
    </a>
  </nav>
</div>
`;

exports[`Sidebar component renders correctly for super admin 1`] = `
<div>
  <nav
    class="sidebarNavigation"
  >
    <a
      class="sidebarLink"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
      Home
    </a>
    <a
      class="sidebarLink"
      href="/projects"
    >
      <svg
        color="primary"
        height="24"
        style="font-size: 24px;"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <style>
            .Design_svg__b{fill:#007bbd}
          </style>
        </defs>
        <path
          d="M0 0h24v24H0z"
          style="fill: none;"
        />
        <path
          class="Design_svg__b"
          d="m16.353 11.51 1.57-1.57-3.75-3.75-1.57 1.57-4.14-4.13a2 2 0 0 0-2.83 0l-1.9 1.9a2 2 0 0 0 0 2.83l4.13 4.13-4.75 4.76V21h3.75l4.76-4.76 4.13 4.13a2 2 0 0 0 2.83 0l1.9-1.9a2 2 0 0 0 0-2.83Zm-7.06-.44-4.14-4.13 1.89-1.9 1.27 1.27-1.18 1.19 1.41 1.41 1.19-1.19 1.45 1.45Zm7.88 7.89-4.13-4.13 1.9-1.9 1.45 1.45-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27ZM20.823 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1.009 1.009 0 0 0-1.41 0l-1.83 1.83 3.75 3.75Z"
        />
      </svg>
      Projects
    </a>
    <a
      class="sidebarLink"
      href="/training"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
        />
      </svg>
      Training
    </a>
    <a
      class="sidebarLink"
      href="/team"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
        />
      </svg>
      Team
    </a>
    <a
      class="sidebarLink"
      href="/companies"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
        />
      </svg>
      Companies
    </a>
    <a
      class="sidebarLink"
      href="/toolkit"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
        />
      </svg>
      Tools
    </a>
    <a
      class="sidebarLink"
      href="/admin/markets"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
      Markets
    </a>
    <a
      class="sidebarLink"
      href="/admin/accounts"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
        focusable="false"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
        />
      </svg>
      Accounts
    </a>
    <a
      class="sidebarLink"
      href="/admin/products"
    >
      <svg
        color="primary"
        height="24"
        style="font-size: 24px;"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <style>
            .Box_svg__b{fill:#007bbd}
          </style>
        </defs>
        <path
          class="Box_svg__b"
          d="M21.385 7.027a.489.489 0 0 0-.055-.153.5.5 0 0 0-.12-.138 2.5 2.5 0 0 0-.8-.736l-7-4a2.507 2.507 0 0 0-2.5 0l-7 4a2.486 2.486 0 0 0-.787.739.473.473 0 0 0-.174.29 2.49 2.49 0 0 0-.282 1.136v8a2.508 2.508 0 0 0 1.252 2.164l7 4a2.507 2.507 0 0 0 2.5 0l7-4a2.507 2.507 0 0 0 1.25-2.163v-8a2.487 2.487 0 0 0-.282-1.139Zm-9.968-4.16a1.508 1.508 0 0 1 1.5 0l7 4a1.51 1.51 0 0 1 .193.135l-3.438 1.989-7.949-4.585Zm-3.7 2.114 7.956 4.588-3.506 2.028-7.943-4.6a1.48 1.48 0 0 1 .191-.133Zm-3.3 12.481a1.5 1.5 0 0 1-.75-1.3v-8a1.471 1.471 0 0 1 .033-.306l7.964 4.608v9.109a1.478 1.478 0 0 1-.252-.113Zm16.25-1.3a1.5 1.5 0 0 1-.748 1.3l-7 4a1.505 1.505 0 0 1-.25.111v-9.11l7.964-4.607a1.485 1.485 0 0 1 .036.308Z"
        />
        <path
          class="Box_svg__b"
          d="M15.214 13.916a.167.167 0 0 0 .084-.023l2.239-1.3a.167.167 0 1 0-.167-.288l-2.239 1.3a.167.167 0 0 0 .084.311ZM15.214 15.249a.167.167 0 0 0 .084-.023l2.239-1.3a.167.167 0 1 0-.167-.288l-2.24 1.301a.167.167 0 0 0 .084.311Z"
        />
        <path
          class="Box_svg__b"
          d="M19 9.696a.333.333 0 0 0-.333 0l-5 2.9a.333.333 0 0 0-.167.288v5a.333.333 0 0 0 .5.288l5-2.892a.333.333 0 0 0 .167-.288v-5A.333.333 0 0 0 19 9.696Zm-.5 5.1-4.333 2.507v-4.228l4.333-2.512Z"
        />
      </svg>
      Inventory
    </a>
  </nav>
</div>
`;
